<resources>
    <string name="app_name">Meteor Land</string>
    <string name="content_authority">com.jhowcs.nasameteoritelandings.datasync.provider</string>
    <string name="sync_account_type">meteorland.com</string>
    <string name="label_explore">Explore</string>
    <string name="label_class">Class</string>
    <string name="label_mass">Mass</string>
    <string name="label_lat">Latitude</string>
    <string name="label_long">Longitude</string>
    <string name="detail_screen_title">Meteor\'s Detail</string>
    <string name="share">Share</string>
    <string name="share_create_chooser_title">Share this Meteoriote</string>
    <string formatted="false" name="share_text">Did you know that the meteorite %s has %.2f of mass?</string>

</resources>
