<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/detail_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/detail_txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    tools:layout_marginTop="@dimen/margin_top_label"
                    tools:text="Österplana 064" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/detail_txtName"
                    android:layout_marginBottom="@dimen/margin_bottom_label"
                    android:layout_marginTop="@dimen/margin_top_label"
                    android:layout_toLeftOf="@+id/textView3"
                    android:layout_toStartOf="@+id/textView3"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/label_class"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/detail_txtName"
                    android:layout_marginBottom="@dimen/margin_bottom_label"
                    android:layout_marginTop="@dimen/margin_top_label"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/label_mass" />

                <TextView
                    android:id="@+id/detail_txtClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView"
                    android:layout_marginBottom="@dimen/margin_bottom_input"
                    android:layout_toLeftOf="@+id/detail_txtMass"
                    android:layout_toStartOf="@+id/detail_txtMass"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    tools:text="L6" />

                <TextView
                    android:id="@+id/detail_txtMass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/textView3"
                    android:layout_marginBottom="@dimen/margin_bottom_input"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    tools:text="334" />

                <include
                    android:id="@+id/divider1"
                    layout="@layout/divider_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_txtClass" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/divider1"
                    android:layout_marginBottom="@dimen/margin_bottom_label"
                    android:layout_marginTop="@dimen/margin_top_label"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/label_lat"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView7"
                    android:layout_marginBottom="@dimen/margin_bottom_input"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    tools:text="58.583330" />

                <include
                    android:id="@+id/divider2"
                    layout="@layout/divider_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_txtLatitude" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/detail_txtLatitude"
                    android:layout_marginBottom="@dimen/margin_bottom_label"
                    android:layout_marginTop="@dimen/margin_top_label"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/label_long"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView9"
                    android:layout_marginBottom="@dimen/margin_bottom_input"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    tools:text="13.433330" />

                <TextView
                    android:id="@+id/detail_btnExplore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/label_explore"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cardview_map"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_top_label"
            app:cardCornerRadius="4dp"
            android:layout_height="@dimen/mapview_portrait_height">

            <com.google.android.gms.maps.MapView xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                map:liteMode="true" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>